tool/src/c/snapshots/diplomat_tool__c__structs__tests__method_taking_slice@MyStruct_type.h.snap
---
source: tool/src/c/structs.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_type_H
#define MyStruct_type_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
namespace capi {
#endif // __cplusplus

typedef struct MyStruct MyStruct;
#ifdef __cplusplus
} // namespace capi
#endif // __cplusplus
#endif // MyStruct_type_H

