tool/src/c/snapshots/diplomat_tool__c__structs__tests__simple_non_opaque_struct@MyStruct_type.h.snap
---
source: tool/src/c/structs.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_type_H
#define MyStruct_type_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
namespace capi {
#endif // __cplusplus

typedef struct MyStruct {
    uint8_t a;
    uint8_t b;
} MyStruct;
#ifdef __cplusplus
} // namespace capi
#endif // __cplusplus
#endif // MyStruct_type_H

